fix: overflow

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
     font-style: normal;
   }
 body{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     scroll-behavior: smooth;
     font-family: "Onest", serif;
     font-optical-sizing: auto;
